force-app/main/default/objects/Patient_Outreach_Profile__c/Patient_Outreach_Profile__c.object-meta.xml
<CustomObject>
    <description>DEV-4536: Per-patient rollup profile for outreach workbench surfaces.</description>
    <label>Patient Outreach Profile</label>
    <nameField>
        <label>Profile Number</label>
        <type>AutoNumber</type>
        <displayFormat>POP-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Patient Outreach Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>