force-app/main/default/objects/Patient_Outreach_Profile__c/fields/Active_Need_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Need_Count__c</fullName>
    <label>Active Need Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>