force-app/main/default/objects/Patient_Outreach_Profile__c/fields/Engine_Key__c.field-meta.xml
<CustomField>
    <fullName>Engine_Key__c</fullName>
    <externalId>true</externalId>
    <label>Engine Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>