force-app/main/default/objects/Patient_Outreach_Profile__c/fields/Episode__c.field-meta.xml
<CustomField>
    <fullName>Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Episode</label>
    <referenceTo>Outreach_Episode__c</referenceTo>
    <relationshipLabel>Patient Outreach Profiles</relationshipLabel>
    <relationshipName>Patient_Outreach_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>