force-app/main/default/objects/Patient_Outreach_Profile__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Outreach Profiles</relationshipLabel>
    <relationshipName>Patient_Outreach_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>