force-app/main/default/objects/Patient_Outreach_Profile__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>