force-app/main/default/objects/Patient_Outreach_Profile__c/fields/Pressure__c.field-meta.xml
<CustomField>
    <fullName>Pressure__c</fullName>
    <label>Attempt Count</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>