force-app/main/default/objects/Patient_Outreach_Profile__c/fields/Temperature__c.field-meta.xml
<CustomField>
    <fullName>Temperature__c</fullName>
    <label>Temperature</label>
    <length>40</length>
    <type>Text</type>
</CustomField>